# AOC2024

./: README.md  pyproject.toml
day01/: __main__.py
day04/: __main__.py
day05/: __main__.py
day06/: __main__.py
day08/: __main__.py
day09/: __main__.py
day1/: __main__.py
day10/: __main__.py
day11/: __main__.py
day12/: __main__.py
day2/: __main__.py
day3/: __main__.py
day4/: __main__.py
day6/: __main__.py
day7/: __main__.py
day8/: __main__.py
